# mixlauncher

./: .gitignore  CMakeLists.txt  MixLauncher_Offline_Setup.iss  github_kurulum.bat  installer.py  pre_installer.py  pre_installer.spec  prepare_offline_bundle.sh
src/: AnimatedTabBar.cpp  AnimatedTabBar.h  AuthManager.cpp  AuthManager.h  DownloadManager.cpp  DownloadManager.h  LauncherCore.cpp  LauncherCore.h  MainWindow.cpp  MainWindow.h  ModManager.cpp  ModManager.h  main.cpp
